--- a/9.html
+++ b/9.html
@@ -138,7 +138,7 @@ input[type=text] {
     <div id="reader"></div>
 
     <div class="input-wrapper">
-        <input type="text" id="barcodeInput" placeholder="Scan Barcode" autocomplete="off">
+        <input type="text" id="barcodeInput" placeholder="Scan Barcode-->" autocomplete="off">
         <button class="scan-btn" onclick="handleCameraButton()" title="Kamera indítása">
             <svg id="camIcon" viewBox="0 0 24 24">
                 <path d="M4 6h2v12H4zm14 0h2v12h-2zm-4 0h2v12h-2zm-4 0h2v12h-2zM2 4v16h20V4H2zm18 14H4V6h16v12z"/>
