--- a/index.html
+++ b/index.html
@@ -1,254 +1,8 @@
-<!DOCTYPE html>
-<html lang="hu">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>FORVIA HUB - MASTER SHELL</title>
-
-    <link rel="icon" type="image/png" href="icon.png">
-    <link rel="apple-touch-icon" href="icon.png">
-    
-    <meta name="apple-mobile-web-app-title" content="Forvia Hub">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="mobile-web-app-capable" content="yes">
-    <style>
-        :root {
-            --bg: #0b1120; --card: #1e293b; --accent: #3b82f6;
-            --text: #f3f4f6; --text-dim: #94a3b8; --border: #334155;
-        }
-
-        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
-
-        body {
-            font-family: 'Inter', system-ui, -apple-system, sans-serif;
-            background: #0f172a; color: var(--text);
-            margin: 0; height: 100dvh; overflow: hidden;
-            display: flex; flex-direction: column;
-            padding-top: env(safe-area-inset-top); 
-        }
-
-        #content-frame {
-            border: none; width: 100%; height: 100%;
-            display: none; 
-            background: #0f172a;
-        }
-
-        #home-screen {
-            flex-grow: 1; display: flex; flex-direction: column;
-            align-items: center; justify-content: center; text-align: center;
-            background: radial-gradient(circle at top right, rgba(59, 130, 246, 0.15), transparent 40%),
-            radial-gradient(circle at bottom left, rgba(16, 185, 129, 0.1), transparent 40%), #0b1120;
-            padding: 20px; position: relative; width: 100%; height: 100%;
-        }
-
-        .glass-card {
-            background: rgba(255, 255, 255, 0.03);
-            backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            padding: 40px 30px; border-radius: 24px;
-            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
-            max-width: 500px; width: 100%; animation: fadeIn 0.8s ease-out;
-        }
-
-        .welcome-title {
-            font-size: 2.2rem; font-weight: 800; margin: 0;
-            color: white; letter-spacing: -1px; margin-bottom: 5px;
-        }
-        .highlight-blue { color: var(--accent); }
-
-        .current-date {
-            color: var(--text-dim); font-size: 0.95rem; margin-bottom: 25px; font-weight: 500; line-height: 1.4;
-        }
-        .nameday-text { color: var(--accent); font-weight: 600; display: block; margin-top: 4px; }
-
-        .visitor-box {
-            background: rgba(0,0,0,0.3); padding: 12px 20px; border-radius: 12px;
-            display: inline-block; margin-bottom: 20px; border: 1px solid rgba(59, 130, 246, 0.3);
-        }
-        .visitor-label { font-size: 10px; text-transform: uppercase; color: var(--text-dim); letter-spacing: 1px; display: block; margin-bottom: 8px; }
-        .visitor-img { height: 24px; }
-
-        .instruction-text {
-            font-size: 1rem; line-height: 1.6; color: #e2e8f0; margin-bottom: 30px;
-        }
-        .instruction-highlight { color: var(--accent); font-weight: 600; }
-
-        .device-info {
-            font-size: 0.8rem; color: #64748b;
-            border-top: 1px solid rgba(255,255,255,0.1);
-            padding-top: 20px; margin-top: 10px;
-        }
-        .good-luck {
-            display: block; margin-top: 5px; color: #10b981; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;
-        }
-
-        @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
-
-        /* --- HÍRSÁV STÍLUS --- */
-        .ticker-wrap {
-            position: fixed; bottom: 0; left: 0; width: 100%; overflow: hidden; height: 36px;
-            background-color: rgba(15, 23, 42, 0.95); border-top: 1px solid var(--accent);
-            z-index: 1000; backdrop-filter: blur(5px);
-            padding-left: 100%; box-sizing: content-box;
-        }
-        .ticker-move {
-            display: inline-block; height: 36px; line-height: 36px; white-space: nowrap;
-            padding-right: 100%; box-sizing: content-box;
-            animation: ticker 30s linear infinite;
-        }
-        .ticker-item {
-            display: inline-block; padding: 0 2rem; font-size: 0.9rem; color: #fbbf24;
-            font-weight: 600; text-transform: uppercase; letter-spacing: 1px;
-        }
-        @keyframes ticker {
-            0% { transform: translate3d(0, 0, 0); }
-            100% { transform: translate3d(-100%, 0, 0); }
-        }
-
-        .sidebar {
-            position: fixed; left: 0; top: 0;
-            width: 280px; height: 100%; background: #111827;
-            border-right: 1px solid var(--border);
-            display: flex; flex-direction: column;
-            transform: translateX(-100%);
-            transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            z-index: 2000;
-            padding-top: env(safe-area-inset-top);
-        }
-        .sidebar.open { transform: translateX(0); box-shadow: 20px 0 50px rgba(0,0,0,0.8); }
-
-        .sidebar-header {
-            padding: 25px 20px;
-            border-bottom: 1px solid var(--border);
-            background: rgba(255,255,255,0.02);
-        }
-        .sidebar-header h2 {
-            font-size: 1.3rem; margin: 0; letter-spacing: 1px; font-weight: 700;
-        }
-
-        .nav-list { padding: 20px; flex-grow: 1; overflow-y: auto; }
-
-        .nav-item {
-            display: flex; align-items: center; padding: 14px 15px;
-            margin-bottom: 8px; border-radius: 12px; text-decoration: none;
-            color: var(--text-dim); font-weight: 500; transition: 0.2s; cursor: pointer;
-        }
-        .nav-item i { width: 30px; font-style: normal; text-align: center; font-size: 1.2rem; }
-        .nav-item:hover, .nav-item.active { background: var(--accent); color: white; }
-
-        .menu-fab {
-            position: fixed; bottom: 30px; right: 30px;
-            width: 60px; height: 60px; background: var(--accent);
-            border-radius: 50%; display: flex; align-items: center; justify-content: center;
-            box-shadow: 0 10px 30px rgba(59, 130, 246, 0.6);
-            cursor: pointer; z-index: 2147483647; 
-            border: 2px solid rgba(255,255,255,0.1);
-            transition: transform 0.2s;
-        }
-        .menu-fab:active { transform: scale(0.9); }
-        .menu-fab span { font-size: 28px; color: white; line-height: 1; }
-
-        .refresh-fab {
-            position: fixed; 
-            bottom: 110px; 
-            right: 37px; 
-            width: 45px; height: 45px;
-            background: rgba(30, 41, 59, 0.8);
-            backdrop-filter: blur(5px);
-            border-radius: 50%; display: flex; align-items: center; justify-content: center;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-            cursor: pointer; z-index: 2147483647;
-            border: 1px solid var(--border);
-            transition: all 0.3s;
-        }
-        .refresh-fab:active { transform: rotate(180deg) scale(0.9); }
-        .refresh-fab span { font-size: 22px; color: var(--accent); line-height: 1; font-weight: bold; }
-
-        .overlay {
-            display: none; position: fixed; inset: 0;
-            background: rgba(0,0,0,0.8); backdrop-filter: blur(4px); z-index: 1500;
-        }
-        .overlay.active { display: block; }
-
-        footer { padding: 20px; border-top: 1px solid var(--border); text-align: center; color: #64748b; font-size: 0.75rem; }
-    </style>
-</head>
-<body>
-
-<div class="overlay" id="overlay" onclick="toggleMenu()"></div>
-
-<div id="home-screen">
-    <div class="glass-card">
-        <h1 class="welcome-title">Üdv <span class="highlight-blue">Felhasználó!</span></h1>
-        <div id="display-date" class="current-date">
-            <span id="date-text">0000. 00. 00.</span><br>
-            <span id="name-day" class="nameday-text">...</span>
-        </div>
-
-        <div class="visitor-box">
-            <span class="visitor-label">Mai látogatások száma</span>
-            <img id="hit-img" class="visitor-img" src="" alt="loading...">
-        </div>
-
-        <p class="instruction-text">
-            Használd a jobb oldalon lévő <span class="instruction-highlight">menügombot</span><br>
-            a használat megkezdéséhez.
-        </p>
-
-        <div class="device-info">
-            Ez a verzió laptop és telefon kijelzőre lett optimalizálva.
-            <span class="good-luck">Jó munkát!</span>
-        </div>
-    </div>
-
-    <div class="ticker-wrap">
-        <div class="ticker-move">
-            <div class="ticker-item">📢 FORVIA SMT APPLIKÁCIÓ INFORMÁCIÓK: Üdvözlünk a rendszerben!---Ez a végleges verzió gépkezelők,technikusok,és műszakvezetők segítésére készült!---BOLDOG ÚJ ÉVET MINDENKINEK!!   2026 🧨🎆🎇 </div>
-        </div>
-    </div>
-</div>
-
-<iframe id="content-frame" name="appFrame"></iframe>
-
-<aside class="sidebar" id="sidebar">
-    <div class="sidebar-header">
-        <h2>
-            <span style="color: white;">FORVIA</span>
-            <span style="color: var(--accent);">SMT</span>
-        </h2>
-    </div>
-
-    <nav class="nav-list">
-        <div onclick="showHome()" class="nav-item active"><i>🏠</i> Kezdőlap</div>
-        <div onclick="loadModule('1.html')" class="nav-item"><i>🔍</i> Alkatrész Kereső</div>
-        <div onclick="loadModule('2.html')" class="nav-item"><i>💰</i> Bérkalkulátor</div>
-        <div onclick="loadModule('3.html')" class="nav-item"><i>📅</i> Műszaknaptár</div>
-        <div onclick="loadModule('4.html')" class="nav-item"><i>📝</i> Napi Jelentés segédlet</div>
-        <div onclick="loadModule('5.html')" class="nav-item"><i>🎭</i> Maszk kereső</div>
-        <div onclick="openSecureLink()" class="nav-item"><i>⚙️</i> Adatgeneráló 🔐</div>
-        <div onclick="loadModule('7.html')" class="nav-item"><i>📊</i> Hiba Analízis</div>
-        <div onclick="openStaffPro()" class="nav-item"><i>👥</i> Szabadságok 2026 🔐</div>
-        <div onclick="loadModule('9.html')" class="nav-item"><i>📷</i> Operátori Barcode Scan </div>
-    </nav>
-
-    <footer>Szoftverfejlesztő:<br><strong style="color:white">GERGŐ ROLAND</strong><br>2026</footer>
-</aside>
-
-<div class="refresh-fab" onclick="window.location.reload()">
-    <span>↻</span>
-</div>
-
-<div class="menu-fab" id="menuFab" onclick="toggleMenu()">
-    <span id="menuIcon">☰</span>
-</div>
-
 <script>
     const nevnapok = {
         "01-01": "Alpár", "01-02": "Ábel", "01-03": "Genovéva, Benjámin", "01-04": "Titusz, Leona", "01-05": "Simon", "01-06": "Boldizsár", "01-07": "Attila, Ramóna", "01-08": "Gyöngyvér", "01-09": "Marcell", "01-10": "Melánia", "01-11": "Ágota", "01-12": "Ernő", "01-13": "Veronika", "01-14": "Bódog", "01-15": "Lóránt, Loránd", "01-16": "Gusztáv", "01-17": "Antal, Antónia", "01-18": "Piroska", "01-19": "Sára, Márió", "01-20": "Fábián, Sebestyén", "01-21": "Ágnes", "01-22": "Vince", "01-23": "Zelma, Rajmund", "01-24": "Timót", "01-25": "Pál", "01-26": "Vanda, Paula", "01-27": "Angelika", "01-28": "Károly, Karola", "01-29": "Adél", "01-30": "Martina, Gerda", "01-31": "Marcella",
         "12-31": "Szilveszter"
     };
-    // (A teljes névnaplista itt folytatódhat, a helytakarékosság miatt rövidítve, de a te kódodban hagyd benne az egészet!)
 
     function updateInfo() {
         const now = new Date();
@@ -279,7 +33,6 @@
         icon.innerText = sidebar.classList.contains('open') ? '✕' : '☰';
     }
 
-    // --- ITT AZ OKOSÍTÁS! SZÓTÁR A FÁJLOKHOZ ---
     const moduleNames = {
         '1.html': '🔍 Alkatrész Kereső',
         '2.html': '💰 Bérkalkulátor',
@@ -292,7 +45,7 @@
         'home':   '🏠 Kezdőlap'
     };
 
-    // --- KÖZPONTI DISCORD KÜLDŐ (MINDENT EZ INTÉZ) ---
+    // --- DISCORD KÜLDŐ ---
     function sendDiscordLog(actionName, colorCode = 3883766) {
         const webhookURL = "https://discord.com/api/webhooks/1455930417155674125/Fo3Kf92QdktExG5mbu65t52MYI5ORFCwIkEnGEen6DboOeyD12zXDsVlsXlMYnhzuGH_";
 
@@ -309,13 +62,13 @@
             username: "Forvia Hub Logger",
             avatar_url: "https://i.imgur.com/4M34hi2.png",
             embeds: [{
-                title: actionName, // Itt lesz pl: "Megnyitva: Bérkalkulátor"
+                title: actionName,
                 color: colorCode,
                 fields: [
                     { name: "⏰ Időpont", value: timeString, inline: true },
                     { name: "🛠️ Eszköz", value: platform, inline: true }
                 ],
-                footer: { text: "Master Shell v2.0" }
+                footer: { text: "Master Shell v2.2 (Security)" }
             }]
         };
 
@@ -326,16 +79,14 @@
         }).catch(err => console.error("Log hiba:", err));
     }
 
-    // --- MODUL BETÖLTÉS (MOST MÁR LOGOL IS!) ---
     function loadModule(url) {
         document.getElementById('home-screen').style.display = 'none';
         document.getElementById('content-frame').style.display = 'block';
         document.getElementById('content-frame').src = url;
         toggleMenu();
 
-        // Itt küldi el a Discordnak, hogy mit nyitottak meg
         const readableName = moduleNames[url] || "Ismeretlen Modul (" + url + ")";
-        sendDiscordLog(`📂 Modul Megnyitva: ${readableName}`, 3066993); // Kékeszöld szín
+        sendDiscordLog(`📂 Modul Megnyitva: ${readableName}`, 3066993);
     }
 
     function showHome() {
@@ -344,40 +95,37 @@
         document.getElementById('content-frame').src = ""; 
         toggleMenu();
         
-        // Ezt is logoljuk
         sendDiscordLog("🏠 Visszatérés a Kezdőlapra", 10070709);
     }
 
-    // --- BIZTONSÁGI BELÉPÉSEK (EZEKET IS LOGOLJUK) ---
+    // --- JAVÍTOTT BIZTONSÁGI RÉSZ (MOST MÁR LÁTOD A JELSZÓT) ---
     function openSecureLink() {
         let pin = prompt("Adatgeneráló - Biztonsági kód:");
         if (pin === "smtforvia2026") {
             window.open("https://gergoroland33-sys.github.io/adatgeneralo/", "_blank");
-            sendDiscordLog("🔐 ADMIN BELÉPÉS: Adatgeneráló", 65280); // Zöld szín (Siker)
+            sendDiscordLog("🔐 ADMIN BELÉPÉS: Adatgeneráló", 65280);
         } else if (pin !== null) {
             alert("Hibás kód!");
-            sendDiscordLog("🚨 HIBÁS PIN: Adatgeneráló", 16711680); // Piros szín (Hiba)
+            // ITT A VÁLTOZÁS: Hozzáadjuk a beírt 'pin'-t az üzenethez
+            sendDiscordLog("🚨 HIBÁS PIN: Adatgeneráló (Beírva: " + pin + ")", 16711680);
         }
     }
 
     function openStaffPro() {
         let pin = prompt("Staff Pro 2026 - Biztonsági kód:");
         if (pin === "smtforvia2026") {
-            loadModule('8.html'); // Betöltjük a modult
-            // A loadModule majd logolja, hogy megnyílt
+            loadModule('8.html');
         } else if (pin !== null) {
             alert("Hibás kód! Hozzáférés megtagadva.");
-            sendDiscordLog("🚨 HIBÁS PIN: Szabadságok", 16711680); // Piros szín
+            // ITT A VÁLTOZÁS: Itt is hozzáadjuk a 'pin'-t
+            sendDiscordLog("🚨 HIBÁS PIN: Szabadságok (Beírva: " + pin + ")", 16711680);
         }
     }
 
     document.addEventListener('gesturestart', function(e) { e.preventDefault(); });
 
-    // Belépéskor lefutó log (Alap)
     window.addEventListener('load', () => {
         sendDiscordLog("🔔 Új felhasználó lépett be az Appba!", 3883766);
     });
 
 </script>
-</body>
-</html>
