--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
     <div class="ticker-wrap">
         <div class="ticker-move">
-            <div class="ticker-item">📢 FORVIA SMT APPLIKÁCIÓ INFORMÁCIÓK: Üdvözlünk a rendszerben!---Ez a végleges verzió gépkezelők,technikusok,és műszakvezetők segítésére készült!---BOLDOG ÚJ ÉVET MINDENKINEK!!   2026 🧨🎆🎇 </div>
+            <div class="ticker-item">📢 FORVIA SMT APPLIKÁCIÓ INFORMÁCIÓK: Üdvözlünk a rendszerben!---Osszátok meg egymás között!---Gépkezelők-Tecnikusok-Műszakvezetők-minden napos segítése az aplikáció célja! 2026</div>
         </div>
     </div>
 </div>
