--- a/8.html
+++ b/8.html
@@ -75,7 +75,7 @@
             cursor: grab;
             padding: 0 6px !important;
             box-shadow: 4px 0 8px rgba(0,0,0,0.3);
-            transition: background 0.2s, color 0.2s; /* Sima váltás */
+            transition: background 0.1s; /* Gyors színváltás */
         }
 
         .matrix-table thead th.name-col { 
@@ -84,12 +84,13 @@
             border-bottom: 1px solid #2d3748;
         }
 
-        /* --- CÉLKERESZT JAVÍTÁS --- */
-        /* Ha a sor aktív (row-highlight), a Név oszlop is legyen kék! */
+        /* --- CÉLKERESZT JAVÍTÁS (EZ A LÉNYEG) --- */
+        /* Ha a sor aktív (row-highlight), a Név oszlop legyen ÉLÉNK KÉK! */
         tr.row-highlight .name-col {
-            background: #2563eb !important; /* Élénk kék háttér */
+            background-color: #3b82f6 !important; /* Forvia kék */
             color: white !important;
-            border-right-color: #93c5fd !important;
+            border-right: 2px solid #93c5fd !important;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.5);
         }
 
         .data-col-fix { min-width: 50px !important; width: 50px !important; }
@@ -104,9 +105,9 @@
         }
         .matrix-table th { color: #94a3b8; font-weight: 700; text-transform: uppercase; font-size: 10px; }
 
-        /* Kiemelés */
-        .row-highlight { background: rgba(37, 99, 235, 0.3) !important; } 
-        .col-highlight { background: rgba(37, 99, 235, 0.3) !important; }
+        /* Kiemelés a sima celláknál */
+        .row-highlight { background: rgba(59, 130, 246, 0.25) !important; } 
+        .col-highlight { background: rgba(59, 130, 246, 0.25) !important; }
 
         /* INPUT */
         .input-cell { 
@@ -127,9 +128,9 @@
 
         /* Aktív input */
         .input-cell:focus {
-            background: rgba(59, 130, 246, 0.2); 
+            background: rgba(59, 130, 246, 0.3); 
             border: 2px solid #60a5fa; 
-            box-shadow: inset 0 0 5px rgba(59, 130, 246, 0.5);
+            box-shadow: inset 0 0 10px rgba(59, 130, 246, 0.6);
             z-index: 10;
             position: relative;
         }
@@ -206,20 +207,20 @@
 
             <div class="flex bg-slate-900/80 p-0.5 rounded-lg border border-slate-700/50">
                 <button onclick="setView('matrix')" id="nav-m" class="px-3 py-1.5 rounded text-[10px] font-black uppercase flex items-center gap-1">
-                    <i class="fas fa-table"></i> <span class="hidden sm:inline">TÁBLA</span>
+                    <i class="fas fa-table"></i> <span>TÁBLA</span>
                 </button>
                 <button onclick="setView('stats')" id="nav-s" class="px-3 py-1.5 rounded text-[10px] font-black uppercase ml-1 flex items-center gap-1">
-                    <i class="fas fa-id-card"></i> <span class="hidden sm:inline">STAT</span>
+                    <i class="fas fa-id-card"></i> <span>STAT</span>
                 </button>
             </div>
             
             <div class="flex gap-1">
                 <button onclick="backupAllData()" title="TELJES Mentés letöltése (A+B+C+D)" class="bg-violet-600 hover:bg-violet-500 px-3 py-1.5 rounded-lg text-[10px] font-black uppercase text-white shadow-lg shadow-violet-600/20 whitespace-nowrap flex items-center gap-1">
-                    <i class="fas fa-download"></i> <span class="hidden sm:inline">MENTÉS</span>
+                    <i class="fas fa-download"></i> <span>MENTÉS</span>
                 </button>
                 
                 <button onclick="addEmp()" class="bg-blue-600 hover:bg-blue-500 px-3 py-1.5 rounded-lg text-[10px] font-black uppercase text-white shadow-lg shadow-blue-600/20 whitespace-nowrap flex items-center gap-1">
-                     <i class="fas fa-plus"></i> <span class="hidden sm:inline">ÚJ</span>
+                     <i class="fas fa-plus"></i> <span>ÚJ</span>
                 </button>
             </div>
         </div>
