--- a/8.html
+++ b/8.html
@@ -394,7 +394,7 @@
             let h = `<tr>
                 <th class="name-col">Név</th>
                 <th class="data-col-fix bg-slate-800 text-blue-300 border-b border-slate-700">KERET</th>
-                <th class="data-col-fix bg-slate-800 text-emerald-400 border-b border-slate-700 border-r-4 border-r-slate-900">KIV</th>`;
+                <th class="data-col-fix bg-slate-800 text-emerald-400 border-b border-slate-700 border-r-4 border-r-slate-900">KIVEHETŐ</th>`;
             
             for(let d=1; d<=days; d++) {
                 const isHoliday = holidays2026.includes(`${m+1}-${d}`);
