--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
             padding: 40px 30px; border-radius: 24px;
             box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
             max-width: 500px; width: 100%; animation: fadeIn 0.8s ease-out;
-            position: relative; /* A megosztás gomb pozicionálásához */
+            position: relative; 
         }
 
-        /* --- ÚJ PRO MEGOSZTÁS GOMB STÍLUS --- */
+        /* --- MEGOSZTÁS GOMB STÍLUS --- */
         .share-card-btn {
             position: absolute;
             top: 20px;
             right: 20px;
-            width: 36px;
-            height: 36px;
+            width: 40px;
+            height: 40px;
             border-radius: 50%;
             background: rgba(255, 255, 255, 0.05);
             border: 1px solid rgba(255, 255, 255, 0.1);
@@ -68,7 +68,6 @@
             justify-content: center;
             cursor: pointer;
             transition: all 0.3s ease;
-            font-size: 1.1rem;
             z-index: 10;
         }
         .share-card-btn:hover {
@@ -78,7 +77,12 @@
             transform: scale(1.1);
             box-shadow: 0 0 15px rgba(59, 130, 246, 0.4);
         }
-        /* ------------------------------------- */
+        .share-icon-svg {
+            width: 20px;
+            height: 20px;
+            fill: currentColor;
+        }
+        /* ----------------------------- */
 
         .welcome-title {
             font-size: 2.2rem; font-weight: 800; margin: 0;
@@ -211,7 +215,9 @@
 <div id="home-screen">
     <div class="glass-card">
         <div class="share-card-btn" onclick="shareApp()" title="App megosztása">
-            🔗
+            <svg class="share-icon-svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92 1.61 0 2.92-1.31 2.92-2.92s-1.31-2.92-2.92-2.92z"/>
+            </svg>
         </div>
 
         <h1 class="welcome-title">Üdv <span class="highlight-blue">Felhasználó!</span></h1>
@@ -410,19 +416,30 @@
         }
     }
 
-    // --- ÚJ PRO MEGOSZTÁS FUNKCIÓ ---
+    // --- ÚJ PRO MEGOSZTÁS FUNKCIÓ (Javított) ---
     async function shareApp() {
         const shareData = {
             title: 'Forvia Hub',
             text: 'Használd te is a Forvia SMT applikációt!',
             url: window.location.href
         };
-        try {
-            await navigator.share(shareData);
-        } catch (err) {
-            // Ha asztali gép, akkor vágólapra másoljuk
-            navigator.clipboard.writeText(window.location.href);
-            alert("Link másolva a vágólapra!");
+        
+        if (navigator.share) {
+            try {
+                // Ha van natív megosztás (mobil), akkor használjuk
+                await navigator.share(shareData);
+            } catch (err) {
+                // Ha a felhasználó visszalép/mégsem (AbortError), NEM csinálunk semmit.
+                // Nem írunk ki semmit, nem másolunk vágólapra. Csendben maradunk.
+            }
+        } else {
+            // Ha asztali gép (PC/Laptop), akkor másoljuk vágólapra
+            try {
+                await navigator.clipboard.writeText(window.location.href);
+                alert("Link a vágólapra másolva!");
+            } catch (err) {
+                console.error('Hiba:', err);
+            }
         }
     }
 
